# cmake-find_package-debug

./: CMakeLists.txt  README.md
qt_fake/qtbase/lib/cmake/Qt6/: Qt6Config.cmake
qt_fake/qtdeclarative/lib/cmake/Qt6Quick/: Qt6QuickConfig.cmake
qt_fake/qtdeclarative/lib/cmake/Qt6QuickControls2/: Qt6QuickControls2Config.cmake
